examples-generated/cluster/oncall/v1alpha1/route.yaml
apiVersion: oncall.grafana.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: oncall/v1alpha1/route
  labels:
    testing.upbound.io/example-name: example_route
  name: example-route
spec:
  forProvider:
    escalationChainSelector:
      matchLabels:
        testing.upbound.io/example-name: default
    integrationSelector:
      matchLabels:
        testing.upbound.io/example-name: example_integration
    msteams:
    - enabled: false
      id: ONCALLMSTEAMSID
    position: 0
    routingRegex: us-(east|west)
    slack:
    - enabled: true
      slackChannelSelector:
        matchLabels:
          testing.upbound.io/example-name: grafana_oncall_slack_channel
    telegram:
    - enabled: true
      id: ONCALLTELEGRAMID
